# howling

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  bucket_8hh.html  bucket_8hh__incl.map  bucket_8hh__incl.md5  bucket_8hh_source.html  classHOWLING__NAMESPACE_1_1ColorSequence-members.html  classHOWLING__NAMESPACE_1_1ColorSequence.html  classHOWLING__NAMESPACE_1_1ColorSequence.js  classHOWLING__NAMESPACE_1_1ColorSequence__inherit__graph.map  classHOWLING__NAMESPACE_1_1ColorSequence__inherit__graph.md5  classHOWLING__NAMESPACE_1_1GameAssets-members.html  classHOWLING__NAMESPACE_1_1GameAssets.html  classHOWLING__NAMESPACE_1_1GameAssets.js  classHOWLING__NAMESPACE_1_1GameAssets__coll__graph.map  classHOWLING__NAMESPACE_1_1GameAssets__coll__graph.md5  classHOWLING__NAMESPACE_1_1GameAssets__inherit__graph.map  classHOWLING__NAMESPACE_1_1GameAssets__inherit__graph.md5  classHOWLING__NAMESPACE_1_1GameAssets_a2417ebaaf5193cad0101033e325dfc58_cgraph.map  classHOWLING__NAMESPACE_1_1GameAssets_a2417ebaaf5193cad0101033e325dfc58_cgraph.md5  classHOWLING__NAMESPACE_1_1GameAssets_a6b16ab83831dff740d65969dec232df4_icgraph.map  classHOWLING__NAMESPACE_1_1GameAssets_a6b16ab83831dff740d65969dec232df4_icgraph.md5  classHOWLING__NAMESPACE_1_1GameAssets_aec258150ef77615d9222b974b4af028d_icgraph.map  classHOWLING__NAMESPACE_1_1GameAssets_aec258150ef77615d9222b974b4af028d_icgraph.md5  classHOWLING__NAMESPACE_1_1GradientColorSequence-members.html  classHOWLING__NAMESPACE_1_1GradientColorSequence.html  classHOWLING__NAMESPACE_1_1GradientColorSequence.js  classHOWLING__NAMESPACE_1_1GradientColorSequence__coll__graph.md5  classHOWLING__NAMESPACE_1_1GradientColorSequence__inherit__graph.map  classHOWLING__NAMESPACE_1_1GuiPrimitives-members.html  classHOWLING__NAMESPACE_1_1GuiPrimitives.html  classHOWLING__NAMESPACE_1_1GuiPrimitives.js  classHOWLING__NAMESPACE_1_1GuiPrimitives__coll__graph.md5  classHOWLING__NAMESPACE_1_1GuiPrimitives__inherit__graph.map  (+509 more)
.github/workflows/: doxygen.yml
assets/scripts/: gui.lua
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  (+39 more)
src/: bucket.hh  color_sequence.cc  color_sequence.hh  game_assets.cc  game_assets.hh  gui_primitives.cc  gui_primitives.hh  hash_utils.hh  howl_assert.hh  logging.cc  logging.hh  lua_config.cc  lua_config.hh  lua_desktop_reloader.hh  lua_machine.cc  lua_machine.hh  lua_raylib_plugin.cc  lua_raylib_plugin.hh  math_operators.hh  memory_profiler.cc  memory_profiler.hh  mesh_builder.cc  mesh_builder.hh  noncopyable.hh  observed_vector.hh  ordered_vector.hh  profiler.cc  profiler.hh  ring_buffer.hh  rng_machine.cc  rng_machine.hh  unsafe_variant.hh  utils.hh
